feat: tambah tutorial variable

--- a/1/tipe-data/index.html
+++ b/1/tipe-data/index.html
@@ -32,7 +32,7 @@
         // Mengatur teks pada elemen dengan id 'nama' menjadi nilai dari variabel nama
         // Menggunakan metode getElementById untuk mendapatkan elemen dengan id 'nama' dan mengatur teksnya menjadi nilai dari variabel nama
 
-        // Penjelasan: Properti textContent digunakan untuk mengatur teks yang ditampilkan di dalam elemen HTML
+        // Properti textContent digunakan untuk mengatur teks yang ditampilkan di dalam elemen HTML
         document.getElementById('nama').textContent = nama;
 
         // Mengatur teks pada elemen dengan id 'umur' menjadi nilai dari variabel umur
