--- a/operasi-matematika/index.html
+++ b/operasi-matematika/index.html
@@ -9,26 +9,8 @@
 <body>
     <h1>Operasi Matematika</h1>
 
-    <script>
-        // Mendefinisikan variabel num1 dengan nilai 10
-        let num1 = 10;
-        // Mendefinisikan variabel num2 dengan nilai 5
-
-        let num2 = 5;
-
-        // Menjumlahkan num1 dan num2, hasilnya disimpan dalam variabel tambah
-        let tambah = num1 + num2;
-        // Mengurangkan num2 dari num1, hasilnya disimpan dalam variabel kurang
-        let kurang = num1 - num2;
-        // Mengalikan num1 dengan num2, hasilnya disimpan dalam variabel kali
-        let kali = num1 * num2;
-        // Membagi num1 dengan num2, hasilnya disimpan dalam variabel bagi
-        let bagi = num1 / num2;
-
-        console.log("Penjumlahan: " + tambah);
-        console.log("Pengurangan: " + kurang);
-        console.log("Perkalian: " + kali);
-        console.log("Pembagian: " + bagi);
-    </script>
+    <!-- Menghubungkan file script.js -->
+    <script src="script.js"></script>
+    
 </body>
 </html>
