fix: menambahkan komentar penjelasan tentang tipe data pada variabel

--- a/perbandingan-logika/index.html
+++ b/perbandingan-logika/index.html
@@ -11,7 +11,10 @@
 
     <p>Contoh penggunaan operator perbandingan:</p>
     <script>
+        // Mendefinisikan variabel angka1 dengan tipe data number dan nilai 10
         let angka1 = 10;
+        
+        // Mendefinisikan variabel angka2 dengan tipe data number dan nilai 5
         let angka2 = 5;
 
         // Memeriksa apakah nilai angka1 lebih besar dari angka2
@@ -26,7 +29,10 @@
 
     <p>Contoh penggunaan operator logika:</p>
     <script>
+        // Mendefinisikan variabel kondisi1 dengan tipe data boolean dan nilai true
         let kondisi1 = true;
+        
+        // Mendefinisikan variabel kondisi2 dengan tipe data boolean dan nilai false
         let kondisi2 = false;
 
         // Menjalankan pengecekan kondisi1 dan kondisi2 menggunakan operator logika AND (&&)
