--- a/array/array.html
+++ b/array/array.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Array</title>
+    <title>Tipe Data Array</title>
 </head>
 
 <body>
