--- a/perulangan/royswanimbo/index.html
+++ b/perulangan/royswanimbo/index.html
@@ -10,30 +10,29 @@
 <body>
 
     <script>
-
         // For Loop
         for (angka = 0; angka < 10; angka++) {
-            document.writeln(<p>Perulangan for ${angka}</p>);
+            document.writeln(`<p>Perulangan for ${angka}</p>`);
         }
 
         // While Loop
         let counter = 1;
         while (counter < 10) {
-            document.writeln(<p>Perulangan while ${counter}</p>);
+            document.writeln(`<p>Perulangan while ${counter}</p>`);
             counter++;
         }
 
         // Do While Loop
         counter = 1;
         do {
-            document.writeln(<p>Perulangan do while ${counter}</p>);
+            document.writeln(`<p>Perulangan do while ${counter}</p>`);
             counter++;
         } while (counter <= 10);
 
         // break
         counter = 1;
         while (true) {
-            document.writeln(<p>Perulangan while ${counter}</p>);
+            document.writeln(`<p>Perulangan while ${counter}</p>`);
             counter++;
 
             if (counter > 50) {
@@ -46,7 +45,7 @@
             if (i % 2 === 0) {
                 continue;
             }
-            document.writeln(<p>Perulangan angka ganjil ${i}</p>);
+            document.writeln(`<p>Perulangan angka ganjil ${i}</p>`);
         }
 
         // continue genap
@@ -54,9 +53,8 @@
             if (i % 2 === 1) {
                 continue;
             }
-            document.writeln(<p>Perulangan angka genap ${i}</p>);
+            document.writeln(`<p>Perulangan angka genap ${i}</p>`);
         }
-
     </script>
 
 </body>
